# QuantPulse

./: .gitignore  DEPLOY_GUIDE_GCP.md  Dockerfile.prod  README.md  docker-compose.yml  introduction.md  phase2.md
.agent/workflows/: codereview.md  commit-workflow.md  deploy-workflow.md  new-feature-workflow.md
backend/: .dockerignore  Dockerfile  celerybeat-schedule  check_coingecko.py  debug_assets.py  debug_fetch.py  main.py  pyproject.toml  test_auth.py
backend/adapters/: __init__.py  base.py  binance_adapter.py  bybit_adapter.py  factory.py  freedom24_adapter.py  trading212_adapter.py
backend/alembic/: env.py
backend/alembic/versions/: 04fa44e8d563_add_currency_to_assets.py  08d5318baffb_add_image_url_to_assets.py  1aa41f4fff5d_add_snapshots_and_usd_value.py  224ec1c73ddd_add_name_to_unified_assets.py  24691d2b4cc7_add_isin_column_to_unifiedasset.py  3368a384d4e4_add_analytics_results.py  38c328a9b6fd_initial_migration.py  a5f7da2cb685_add_unified_assets_and_portfolio_.py  add_integrations_table.py  c3c2775a8420_add_market_price_history.py  db8e60ffd7f6_add_market_price_history.py  fix_missing_change_24h.py  fix_missing_current_price.py  fix_schema_mismatch.py  manual_freedom24_enum.py
backend/core/: config.py  database.py  deps.py  encryption.py  logging_config.py  redis.py  security.py
backend/core/security/: __init__.py  auth.py  encryption.py
backend/core/services/: coingecko.py
backend/core/utils/: retries.py
backend/models/: analytics_result.py  assets.py  integration.py  market_data.py  user.py
backend/routers/: analytics.py  auth.py  dashboard.py  integrations.py  users.py
backend/schemas/: assets.py  integration.py  user.py
backend/services/: __init__.py  analytics.py  currency.py  deduplication.py  distributed_lock.py  history_provider.py  history_provider_factory.py  icons.py  market_data.py  price_service.py  snapshot_service.py  symbol_resolver.py  sync_manager.py  trading212.py
backend/services/analytics/: __init__.py  base.py  data_provider.py  result_store.py
backend/services/analytics/calculators/: __init__.py  volatility.py
backend/tests/: conftest.py
backend/tests/analytics/: bench_volatility.py  test_data_provider_logic.py  test_history_providers.py  test_volatility_detailed.py  test_volatility_math.py
backend/worker/: celery_app.py  tasks.py
deployment/gcp/: Caddyfile  docker-compose.prod.yml  setup_gcp.sh
frontend/: Dockerfile.prod  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  template.tsx
(+53 files in other folders)
