[tool.poetry]
name = "quantpulse-backend"
version = "0.1.0"
description = ""
authors = ["QuantPulse Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.26"
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.0"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"
python-multipart = "^0.0.9"
ccxt = "^4.0.0"
cryptography = "^46.0.3"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.1"
httpx = "^0.28.1"
yfinance = "^0.2.36"
tradernet-sdk = "^1.0.0"
fastapi-limiter = "^0.1.6"
tenacity = "^9.0.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
scipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E), and pydocstyle (D)
select = ["E", "F", "D"]
# Focus on module-level docs, ignore missing docs for individual methods/classes for now
ignore = ["D101", "D102", "D103", "D105", "D106", "D107", "D200", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"
